--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
   <body>
     <main>
     </main>
+    <script src="js/player.js"></script>
+    <script src="js/game.js"></script>
     <script src="js/map.js"></script>
     <script src="sketch.js"></script>
   </body>
