moved map functions

--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
   <body>
     <main>
     </main>
-    <script src="js/player.js"></script>
-    <script src="js/game.js"></script>
     <script src="js/map.js"></script>
+    <script src="js/player.js"></script>
+    <script src="js/game_map.js"></script>
+    <script src="js/game.js"></script>
     <script src="sketch.js"></script>
   </body>
 </html>
